--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "ajv": "^8.12.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.2",
     "esm": "^3.2.25",
     "express": "^4.18.2",
