--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Picnic Funds",
-  "name": "Picnic Funds",
+  "short_name": "AF Demo",
+  "name": "AF Demo",
   "icons": [
     {
       "src": "favicon.ico",
