--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.2",
     "dotenv": "^16.4.3",
     "esm": "^3.2.25",
+    "firebase": "^10.12.3",
     "moment-timezone": "^0.5.45",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
