--- a/server/vercel.json
+++ b/server/vercel.json
@@ -10,7 +10,13 @@
     {
       "src": "/(.*)",
       "dest": "index.js",
-      "methods": ["GET", "POST", "OPTIONS", "PUT", "PATCH", "DELETE"]
+      "methods": ["GET", "POST", "OPTIONS", "PUT", "PATCH", "DELETE"],
+      "headers": {
+        "Access-Control-Allow-Origin": "http://localhost:5173",
+        "Access-Control-Allow-Methods": "GET, POST, OPTIONS, PUT, DELETE",
+        "Access-Control-Allow-Headers": "Content-Type, Authorization",
+        "Access-Control-Allow-Credentials": "true"
+      }
     }
   ]
 }
