--- a/server/vercel.json
+++ b/server/vercel.json
@@ -6,17 +6,27 @@
       "use": "@vercel/node"
     }
   ],
+  "rewrites": [
+    {
+      "source": "/(.*)", "destination": "/"
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)",
       "dest": "index.js",
-      "methods": ["GET", "POST", "OPTIONS", "PUT", "PATCH", "DELETE"],
+      "methods": ["OPTIONS"],
       "headers": {
         "Access-Control-Allow-Origin": "http://localhost:5173",
-        "Access-Control-Allow-Methods": "GET, POST, OPTIONS, PUT, DELETE",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
         "Access-Control-Allow-Headers": "Content-Type, Authorization",
         "Access-Control-Allow-Credentials": "true"
       }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "index.js",
+      "methods": ["GET", "POST", "PUT", "DELETE"]
     }
   ]
 }
