--- a/server/vercel.json
+++ b/server/vercel.json
@@ -8,9 +8,13 @@
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "server.js"
+    },
+    {
       "src": "/(.*)",
-      "dest": "server.js",
-      "methods": ["GET", "POST", "PUT", "PATCH", "DELETE"]
+      "methods": ["GET", "POST", "PUT", "DELETE"],
+      "dest": "server.js"
     }
   ]
 }
