--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ Association_Funds_New_Data
 Association_Funds_Old_Data
 /components_firebase
 /components_mongo
+/client/src/components/TestForOtp.jsx
